1.头像点击处理 2.忘记密码功能开发 3.用户协议跳转问题处理
测试版：1.1.20220910.0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -195,6 +195,12 @@
 
 
     <string name="m153_email">Email</string>
-
+    <string name="m154_delete_charge">Delete charge</string>
+    <string name="m155_delete_tips">Are you sure you want to delete the charge？</string>
+    <string name="m156_take_photo">Take a photo</string>
+    <string name="m157_select_album">Select from album</string>
+    <string name="m158_send_verify_code">Send verify code</string>
+    <string name="m159_please_verify_code">Please enter the verification code</string>
+    <string name="m160_second_after_send">%ds second after send</string>
 
 </resources>
