--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -210,6 +210,9 @@
     <string name="m164_start_charging">Start Charging</string>
     <string name="m165_reservation_charging">Reservation charging</string>
     <string name="m166_save">Save</string>
+    <string name="m167_enable">Enable</string>
+    <string name="m168_keep_awake">Keep awake</string>
+    <string name="m169_set_time">Set time</string>
 
 
 </resources>
