--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -213,6 +213,8 @@
     <string name="m167_enable">Enable</string>
     <string name="m168_keep_awake">Keep awake</string>
     <string name="m169_set_time">Set time</string>
+    <string name="m170_not_empty">Content cannot be empty</string>
+
 
 
 </resources>
