第一版开发完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -218,6 +218,7 @@
     <string name="m172_connect_ev">Connect EV</string>
     <string name="m173_disconnect_ev">Disconnect EV</string>
     <string name="m174_authentication">Authentication</string>
+    <string name="m175_not_set">Not set</string>
 
 
 
